# Packman

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATION_MAP.csv  README.md  REORG_PLAN.md  VALIDATION_REPORT.md  package.json  packman-app-launch  packman-app-launch.cmd  packman-cli-launch  packman-cli-launch.cmd  packman-rich  packman-rich.cmd  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: packs-governance.yml  python-packaging.yml
.trunk/: trunk.yaml
Packs/: AGENTS.md  README.md  llms.txt
Packs/copilot-architecture-governance-pack/: PACK_MANIFEST.json  README.md  llms.txt
Packs/copilot-award-ui-pack/: AGENTS.md  PACK_MANIFEST.json  README.md  llms.txt
Packs/copilot-docs-librarian-pack/: .vale.ini  PACK_MANIFEST.json  README.md  llms.txt
Packs/copilot-edge-case-vanguard-pack/: PACK_MANIFEST.json  README.md  llms.txt
Packs/copilot-github-bootstrap-pack/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PACK_MANIFEST.json  README.md  SECURITY.md  SUPPORT.md  llms.txt
Packs/copilot-gold-standards-steward-pack/: PACK_MANIFEST.json  README.md  llms.txt
Packs/copilot-hooks-orchestrator-pack/: PACK_MANIFEST.json  README.md  llms.txt
artifacts/: collections.json  frontmatter-fixes.md  hooks-design.md  install-links-report.md  suite-index.md  suite-inventory.json
docs/: README.md
fixtures/: README.md
packman/: README.md  package.json  tsconfig.json
packman-app/: index.html  package.json  tailwind.config.js  tsconfig.json  wdio.tauri.conf.mjs
packman-app/src-tauri/: Cargo.toml  tauri.conf.json
packman-app/src-tauri/capabilities/: main-window.json  viewer-window.json
packman-app/src-tauri/icons/: icon.icns
packman-app/src-tauri/src/: main.rs
packman-cli/: package.json
packman-core/: package.json
packman-py/: README.md  pyproject.toml  requirements.txt
packman-py/packman_py/: __init__.py  packman.py
scripts/: build-executables.sh  build-python-dist.sh  build-python-exe.sh  check-manifest-owned-paths.mjs  check-mirror-drift.mjs  check-route-ownership.mjs  create-root-launchers.sh  generate-install-links-report.mjs  generate-suite-collections-index.mjs  generate-suite-inventory.mjs  pack-planning-e2e.sh  preflight.sh  reorg-build-exports.mjs  run-governance-validation-log.mjs  sync-mirrors.mjs
tools/: build-clean-zip.mjs
(+494 files in other folders)
