[project]
name = "packman-py"
version = "0.1.0"
description = "Packman Python CLI using Typer + Rich"
readme = "README.md"
authors = [{ name = "Packman", email = "devnull@example.com" }]
requires-python = ">=3.10"
dependencies = ["typer[all]>=0.23.1", "rich>=14.3.2"]

[project.scripts]
packman-py = "packman_py.packman:app"

[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"
