[package]
name = "packman-app"
version = "0.1.0"
description = "Packman Tauri app"
authors = ["Packman"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"

[features]
default = []
