[package]
name = "packman-app"
version = "0.1.0"
description = "Packman Tauri app"
authors = ["Packman"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[features]
default = []
